# HierarchyCraft

./: .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CONTRIBUTING.md  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  coverage.xml  flake.nix  paper.bib  paper.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  shell.nix
.github/workflows/: draft-pdf.yml  pydoc-github-pages.yml  python-coverage.yml  python-pypi.yml  python-tests-all-optdeps.yml  python-tests-no-optdeps.yml  python-tests.yml
commands/: generate_html_doc.ps1  generate_paper.ps1
crafting/: __init__.py  env.py  graph.py  option.py  task.py
crafting/examples/: __init__.py
crafting/options/: __init__.py  actions.py  feature_conditions.py  options.py  utils.py
crafting/player/: __init__.py  inventory.py  player.py
crafting/render/: __init__.py  render.py  rendering.py  utils.py  widgets.py
crafting/tasks/: __init__.py  task.py
crafting/world/: __init__.py  items.py  map.py  recipes.py  world.py  zones.py
docs/: conf.py  crafting.rst  generate_html_doc.ps1  index.rst  player.rst  requirements.txt  world.rst
docs/crafting/: index.rst  player.rst  world.rst
docs/template/: README.md  content.css  custom.css  layout.css  module.html.jinja2  theme.css
src/crafting/: __init__.py  __main__.py  cli.py  constants.py  elements.py  env.py  metrics.py  planning.py  purpose.py  requirement_graph.py  requirements.py  solving_behaviors.py  state.py  task.py  transformation.py  world.py
src/hcraft/: __init__.py  __main__.py  cli.py  elements.py  env.py  metrics.py  planning.py  purpose.py  requirements.py  solving_behaviors.py  state.py  task.py  transformation.py  world.py
tests/: check_array.py  custom_checks.py  envs.py  test_build_env.py  test_cli.py  test_env.py  test_gym.py  test_metrics.py  test_planning.py  test_purpose.py  test_random_legal.py  test_render.py  test_requirements.py  test_solving_behaviors.py  test_tasks.py  test_transformation.py  test_world.py
tests/examples/: __init__.py  test_common.py  test_key_door.py  test_minicraft.py  test_random.py  test_recursive.py  test_tower.py
tests/integration/: __init__.py  test_env.py
tests/pipelines/: __init__.py  test_env.py
tests/planning/: test_can_solve.py  test_dummy_env.py  test_mineHcraft.py  test_planning.py
tests/player/: test_inventory.py
tests/render/: test_render.py  test_widgets.py
tests/requirements/: test_available_from_start.py  test_can_draw.py
tests/solving_behaviors/: test_can_solve.py  test_doc_example.py  (+1 more)
(+198 files in other folders)
