[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]

[project]
name = "hcraft"
description = "Lightweight environments to study hierarchical reasoning"

dynamic = ["version", "readme", "dependencies"]
license = { text = "GNU General Public License v3 or later (GPLv3+)" }
requires-python = ">=3.7"
authors = [
    { name = "Mathïs Fédérico" },
    { name = "Mathïs Fédérico", email = "mathfederico@gmail.com" },
]
keywords = [
    "gym",
    "hcraft",
    "minecraft",
    "hierachical",
    "reinforcement",
    "learning",
]


[project.optional-dependencies]
gym = ["gym >= 0.17.3"]
gui = ["pygame >= 2.1.0", "pygame-menu >= 4.3.8"]
all = ["gym >= 0.17.3", "pygame >= 2.1.0", "pygame-menu >= 4.3.8"]

[project.urls]
Source = "https://github.com/IRLL/HierarchyCraft"

[tool.setuptools]
license-files = ['LICEN[CS]E*', 'COPYING*', 'NOTICE*', 'AUTHORS*']

[project.scripts]
hcraft = "hcraft.__main__:main"

[tool.setuptools.dynamic]
readme = { file = ["README.md"] , content-type = "text/markdown"}
dependencies = { file = ["requirements.txt"] }

[tool.setuptools_scm]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = ["tests"]
log_level = "DEBUG"

[tool.coverage.run]
source = ["src"]

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.mypy]
files = "src"
plugins = "numpy.typing.mypy_plugin"
check_untyped_defs = false
disallow_any_generics = false
disallow_incomplete_defs = true
no_implicit_optional = false
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
